--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,31 @@
-{
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
-}
-
 // {
-//   "compilerOptions": {
-//     "target": "es6", // أو أي إصدار مناسب من JavaScript
-//     "module": "commonjs", // يمكنك تعديله حسب احتياجاتك
-//     "strict": true, // تفعيل وضع التحقق الصارم من الأخطاء
-//     "forceConsistentCasingInFileNames": true, // تجنب مشاكل حالة الأحرف
-//     "esModuleInterop": true,
-//     "skipLibCheck": true,
-//     "jsx": "react", // استخدام "react-jsx" إذا كنت تستخدم React 17 أو أحدث
-//     "moduleResolution": "node",
-//     "allowSyntheticDefaultImports": true,
-//     "sourceMap": true,
-//     "outDir": "./dist" // مسار إخراج الملفات المجمعة
-//   },
-//   "include": ["src"], // تأكد من أن هذا المسار موجود
-//   "exclude": ["node_modules", "dist"],
+//   "files": [],
 //   "references": [
 //     { "path": "./tsconfig.app.json" },
 //     { "path": "./tsconfig.node.json" }
 //   ]
 // }
+
+{
+  "compilerOptions": {
+    "target": "es6", // أو أي إصدار مناسب من JavaScript
+    "module": "esnext", // أو "es2020"
+    "strict": true, // تفعيل وضع التحقق الصارم من الأخطاء
+    "forceConsistentCasingInFileNames": true, // تجنب مشاكل حالة الأحرف
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "jsx": "react", // استخدام "react-jsx" إذا كنت تستخدم React 17 أو أحدث
+    "moduleResolution": "bundler", // استخدام "bundler" بدلاً من "node"
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "outDir": "./dist", // مسار إخراج الملفات المجمعة
+    "allowImportingTsExtensions": true,
+    "noEmit": true // أو استخدم "emitDeclarationOnly": true حسب احتياجاتك
+  },
+  "include": ["src"], // تأكد من أن هذا المسار موجود
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
+}
